{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "77bb56e3-c10a-408b-903e-078c565627cc",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e18e6f57-eb3d-4d24-89f1-459a85be44a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "ZQSD",
                    "id": "b618c9a1-93be-4182-9ac2-d64edb672694",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "183736e7-a649-4497-8878-ef2969e93cac",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bb6f9797-18f1-4665-bef8-76c357667bc0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e58712db-124d-4e75-b57b-0e2f32d8c223",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6b6cb75a-637e-4b60-a7d1-c4afba1a8a74",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}